force-app/main/default/objects/Income395__mdt/Income395__mdt.object-meta.xml
<CustomObject>
    <label>Income395</label>
    <pluralLabel>Income395</pluralLabel>
</CustomObject>