force-app/main/default/objects/Income395__mdt/fields/Minimal_Commision_USD__c.field-meta.xml
<CustomField>
    <fullName>Minimal_Commision_USD__c</fullName>
    <label>Minimal Commision USD</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>