force-app/main/default/objects/Income395__mdt/fields/Minimal_Commission_ILS__c.field-meta.xml
<CustomField>
    <fullName>Minimal_Commission_ILS__c</fullName>
    <label>Minimal Commission ILS</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>