force-app/main/default/objects/Income395__mdt/fields/Minimal_Policy_Duration__c.field-meta.xml
<CustomField>
    <fullName>Minimal_Policy_Duration__c</fullName>
    <label>Minimal Policy Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>